<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/story_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextClock
        android:id="@+id/textclock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTextWhite"
        android:visibility="gone"
        android:format24Hour="h:mm"
        android:textSize="15sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp" />

    <TextView
        android:id="@+id/chapternameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTextWhite"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="15sp" />

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/loadLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlAccentColor="#00000000"
        app:srlPrimaryColor="#00000000"
        app:srlEnablePreviewInEditMode="true">

        <com.scwang.smart.refresh.header.ClassicsHeader
            android:id="@+id/loadheader"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            app:srlEnableLastTime="false"
            app:srlTextPulling="@string/pulling"
            app:srlTextLoading="@string/header_refreshing"
            app:srlTextRelease="@string/header_release"
            app:srlTextFinish="@string/load_finish"
            app:srlTextRefreshing="@string/header_refreshing"/>


    <ScrollView
        android:id="@+id/storyscroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:visibility="invisible"
                android:text="storyText"
                android:textSize="24sp"
                android:textColor="@color/colorText"/>

        </LinearLayout>
    </ScrollView>
    <com.scwang.smart.refresh.footer.ClassicsFooter
        android:id="@+id/loadfooter"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        app:srlTextRelease="@string/footer_release"
        app:srlTextPulling="@string/pulling"/>

    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
</RelativeLayout>

